# outlook-to-google-calendar

./: .gitignore  .pre-commit-config.yaml  LICENSE  config_sample.py  outlook_to_google.py  pyproject.toml  readme.md  requirements.txt  run.sh
.github/workflows/: ci.yml
credentials/: quickstart.py
src/: config_sample.py  run.sh
tests/: test_outlook_to_google.py
