[project]
name = "outlook-to-google-calendar"
version = "0.0.0"
description = "Sync Outlook calendar to Google calendar"
readme = "readme.md"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4==4.13.*",
    "google-api-python-client==2.170.*",
    "google-auth-httplib2==0.2.*",
    "google-auth-oauthlib==1.2.*",
    "o365==2.1.*",
    "pytz==2025.*",
]

[dependency-groups]
dev = ["prek>=0.2", "pytest>=9", "validate-pyproject[all]>=0.24"]

[tool.ruff]
cache-dir = "~/.cache/pre-commit/ruff"
line-length = 100

[tool.ruff.lint]
#extend-ignore = ["T201"]
#extend-select = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-line-length = 110 # line length + 10% since it isn't a hard upper bound

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
required-version = "==0.11.*"
