[project]
name = "outlook-to-google-calendar"
version = "0.0.0"
description = "Sync Outlook calendar to Google calendar"
readme = "readme.md"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4==4.14.*",
    "google-api-python-client==2.196.*",
    "google-auth-httplib2==0.4.*",
    "google-auth-oauthlib==1.4.*",
    "o365==2.1.*",
]

[dependency-groups]
dev = ["prek>=0.4", "pytest>=9", "validate-pyproject[all]>=0.25"]

[tool.ruff]
cache-dir = "~/.cache/pre-commit/ruff"
line-length = 100

[tool.ruff.lint]
extend-ignore = ["T201"]
extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"credentials/quickstart.py" = ["ALL"]
"config_sample.py" = ["D100", "S105"]
"outlook_to_google.py" = ["ANN401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 110 # line length + 10% since it isn't a hard upper bound

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv]
required-version = "==0.11.*"
